# navkit-rpkg-lib

./: Cargo.toml  README.md  build.rs  cbindgen.toml  package-lock.json
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/extract/: aloc_or_prim_extraction.rs  mod.rs  rpkg_extraction.rs
src/json_serde/: entities_json.rs
src/package/: package_scan.rs
