[package]
name = "glacier2obj"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
categories = ["game-development", "data-structures", "parser-implementations"]
description = "Read a NavKit scene file and extract the needed ALOCs or PRIMs."
repository = "https://github.com/dbierek/glacier2obj"
readme = "README.md"

[lib]
name = "glacier2obj"
crate-type = ["cdylib", "rlib"]

[badges.maintenance]
status = "actively-developed"

[dependencies]
rpkg-rs = "=1.0.0-rc.1"
itertools = { version = "0.12.1", features = [] }
rayon = { version = "1.10.0", optional = true}
serde = { version = "1.0.199", optional = true, features = ["derive"] }
serde_json = { version = "1.0.117"}
serde-hex = { version = "0.1.0", optional = true }

[features]
default = ["path-list", "serde"]
path-list = ["dep:rayon"]
serde = ["dep:serde", "dep:serde-hex"]

[dev-dependencies]
serde_json = "1.0.116"

[[bin]]
name = "glacier2obj-cli"
path = "src/main.rs"

[build-dependencies]
cbindgen = "0.26"
