[package]
name = "navkit-rpkg-lib"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
categories = ["game-development", "data-structures", "parser-implementations"]
description = "A C++ library that has functions to find needed resources from a NavKit scene file and extract resources."
repository = "https://github.com/glacier-modding/navkit-rpkg-lib"
readme = "README.md"

[lib]
name = "navkit_rpkg_lib"
crate-type = ["cdylib", "rlib"]

[badges.maintenance]
status = "actively-developed"

[dependencies]
rpkg-rs = "=1.2.0"
itertools = { version = "0.14.0", features = [] }
anyhow = "1.0.95"
rayon = { version = "1.10.0", optional = true}
serde = { version = "1.0.194", optional = true, features = ["derive"] }
serde_json = { version = "1.0.138"}
serde-hex = { version = "0.1.0", optional = true }
serde-smile = "0.2.2"

[dependencies.hitman-commons]
git = "https://github.com/atampy25/hitman-commons"
features = ["serde", "specta", "rpkg-rs", "glacier-texture", "tonytools", "resourcelib", "hash_list", "game_detection"]

[dependencies.hitman-formats]
git = "https://github.com/atampy25/hitman-formats"
features = ["material", "serde"]

[dependencies.reqwest]
version = "0.12.12"
features = ["json", "blocking"]

[features]
default = ["path-list", "serde"]
path-list = ["dep:rayon"]
serde = ["dep:serde", "dep:serde-hex"]

[dev-dependencies]
serde_json = "1.0.116"

[build-dependencies]
cbindgen = "0.26"
